--- a/_config.yml
+++ b/_config.yml
@@ -22,22 +22,26 @@ repository               : "zzyzhangzhuoye/zzyzhangzhuoye.github.io"
 author:
   # Biographic information
   avatar           : "ZhangZhuoye.jpg"
-  name             : "Your Sidebar Name"
+  name             : "Zhuoye Zhang"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : - "Post-doctoral Fellow,"
+  - "Industrial and Manufacturing Systems Engineering,"
+  - "The University of Hong Kong"
+  location         : "Hong Kong"
+  employer         : #"The University of Hong Kong"
   uri              : # URL
-  email            : "none@example.org" 
 
-  # Academic websites
+
+    # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=5PQtFDIAAAAJ&hl=zh-CN&oi=ao"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/my-orcid?orcid=0000-0001-9942-891X"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+  pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  researchgate     : "https://www.researchgate.net/profile/Zhuoye-Zhang"
+  email            : "zhangzzy@connect.hku.hk" 
+
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
