--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,17 @@ author:
   location         : "Hong Kong"
   employer         : #"The University of Hong Kong"
   uri              : # URL
+  email            : "zhangzzy@connect.hku.hk" 
 
 
-
+  # Academic websites
+  arxiv            : # URL - Update with the correct link to your profile
+  googlescholar    : "https://scholar.google.com/citations?user=5PQtFDIAAAAJ&hl=zh-CN&oi=ao"
+  impactstory      : # URL
+  orcid            : "https://orcid.org/my-orcid?orcid=0000-0001-9942-891X"
+  semantic         : # URL
+  pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  researchgate     : "https://www.researchgate.net/profile/Zhuoye-Zhang"
 
 
   # Repositories and software development
