--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Zhuoye Zhang / Homepage"
 title_separator          : "-"
 name                     : &name "Zhuoye Zhang"
 description              : &description "personal description"
-url                      : "https://zzyzhangzhuoye.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://zzyzhangzhuoye.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "zzyzhangzhuoye/zzyzhangzhuoye.github.io"
 
@@ -31,7 +31,6 @@ author:
   employer         : #"The University of Hong Kong"
   uri              : # URL
   email            : "zhangzzy@connect.hku.hk" 
-
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
@@ -52,7 +51,7 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : #"bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
