--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
     url: /markdown/
 
   - title: "Research experiences"
-    url: /experience/
+    url: /year-archive/
     
   #- title: "Portfolio"
   #  url: /portfolio/
