--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,22 +6,22 @@
 
 main:
   - title: "Publications"
-     url: /cv/   
+    url: /publications/
 
-  - title: "Talks and Conferences"
-    url: /markdown/
+  - title: "Talks"
+    url: /talks/    
 
-   #- title: "Research experiences"
-    # url: /year-archive/
+  - title: "Teaching"
+    url: /teaching/    
     
-  #- title: "Portfolio"
-  #  url: /portfolio/
+  - title: "Portfolio"
+    url: /portfolio/
         
-  #- title: "Blog Posts"
-  #  url: /year-archive/
+  - title: "Blog Posts"
+    url: /year-archive/
     
-  #- title: "CV"
-  #  url: /cv/
+  - title: "CV"
+    url: /cv/
     
-  #- title: "Guide"
-  #  url: /markdown/
+  - title: "Guide"
+    url: /markdown/
