--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,8 +5,8 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Publications"
-    url: /publications/
+ # - title: "Publications"
+ #   url: /publications/
 
   - title: "Talks"
     url: /talks/    
@@ -20,7 +20,7 @@ main:
   - title: "Blog Posts"
     url: /year-archive/
     
-  - title: "CV"
+  - title: "Publications"
     url: /cv/
     
   - title: "Guide"
