--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
     url: /cv/
 
   - title: "Talks and Conferences"
-    url: /talk/    
+    url: /conferences/    
 
   #- title: "Teaching"
   #  url: /teaching/    
