--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@ main:
   - title: "Publications"
     url: /cv/
 
-  - title: "Talks and Conferences"
+  - title: "Conferences"
     url: /conferences/    
 
   #- title: "Teaching"
