--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,8 @@ author:
   name             : "Zhuoye Zhang"
   pronouns         : # example: "she/her"  
   bio              : "Post-doctoral Fellow,
-  
-                     Industrial and Manufacturing Systems Engineering,
-                     
-                     The University of Hong Kong"
+                      -Industrial and Manufacturing Systems Engineering,
+                      -The University of Hong Kong"
   location         : "Hong Kong"
   employer         : #"The University of Hong Kong"
   uri              : # URL
