--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ author:
   avatar           : "ZhangZhuoye.jpg"
   name             : "Zhuoye Zhang"
   pronouns         : # example: "she/her"  
-  bio              : "Post-doctoral Fellow,<br>Data and Systems Engineering,<br>The University of Hong Kong"
+  bio              : "Research Associate,<br>Civil and Environmental Engineering,<br>Hong Kong University of Science and Technology"
   location         : "Hong Kong"
-  employer         : #"The University of Hong Kong"
+  employer         : #"Hong Kong University of Science and Technology"
   uri              : # URL
   email            : "zhangzzy@connect.hku.hk" 
 
